--- a/WordPress/Classes/ViewRelated/Me/MyProfileHeaderView.xib
+++ b/WordPress/Classes/ViewRelated/Me/MyProfileHeaderView.xib
@@ -31,9 +31,7 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hfE-Wp-Ea1">
                                 <rect key="frame" x="127.5" y="74" width="80" height="19.5"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
-                                <state key="normal" title="Button text">
-                                    <color key="titleColor" red="0.0" green="0.52941176470588236" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
+                                <state key="normal" title="Button text"/>
                                 <connections>
                                     <action selector="onProfileWasPressed:" destination="fcx-xK-EJj" eventType="touchUpInside" id="6bg-EF-94L"/>
                                 </connections>
