Propagate changes in traitCollection to super

--- a/WordPress/Classes/ViewRelated/NUX/Login.storyboard
+++ b/WordPress/Classes/ViewRelated/NUX/Login.storyboard
@@ -1620,7 +1620,7 @@
     <inferredMetricsTieBreakers>
         <segue reference="7lv-19-h36"/>
         <segue reference="qLI-qX-rkG"/>
-        <segue reference="0ao-yi-yZI"/>
+        <segue reference="ySQ-EM-6JI"/>
         <segue reference="1xT-tL-sp6"/>
         <segue reference="swV-lc-6gI"/>
     </inferredMetricsTieBreakers>
