--- a/WordPress/Classes/ViewRelated/NUX/EmailMagicLink.storyboard
+++ b/WordPress/Classes/ViewRelated/NUX/EmailMagicLink.storyboard
@@ -123,8 +123,8 @@
                                     </mask>
                                 </variation>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0O-LO-6ax">
-                                <rect key="frame" x="90" y="617" width="195" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0O-LO-6ax" customClass="SubheadlineButton" customModule="WordPress" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="617" width="375" height="30"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                 <state key="normal" title="Enter your password instead">
                                     <color key="titleColor" red="0.0" green="0.52941176469999995" blue="0.74509803919999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -139,6 +139,7 @@
                         <constraints>
                             <constraint firstItem="L3o-Cy-vXw" firstAttribute="leading" secondItem="Xyo-MA-Ddd" secondAttribute="leadingMargin" constant="20" id="EG6-tW-icm"/>
                             <constraint firstItem="b0O-LO-6ax" firstAttribute="centerX" secondItem="Xyo-MA-Ddd" secondAttribute="centerX" id="RM7-fX-URR"/>
+                            <constraint firstItem="b0O-LO-6ax" firstAttribute="width" secondItem="Xyo-MA-Ddd" secondAttribute="width" id="Sd7-GA-QNv"/>
                             <constraint firstItem="vKK-Mm-0yR" firstAttribute="top" secondItem="b0O-LO-6ax" secondAttribute="bottom" priority="900" constant="20" id="T3w-we-LXY"/>
                             <constraint firstItem="L3o-Cy-vXw" firstAttribute="centerY" secondItem="Xyo-MA-Ddd" secondAttribute="centerY" constant="-20" id="ece-WV-24S"/>
                             <constraint firstAttribute="trailingMargin" secondItem="L3o-Cy-vXw" secondAttribute="trailing" constant="20" id="pS9-2a-bJD"/>
@@ -159,7 +160,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ypF-IN-pDx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2671" y="147"/>
+            <point key="canvasLocation" x="2669.5999999999999" y="146.17691154422789"/>
         </scene>
         <!--SignupEpilogue-->
         <scene sceneID="TvG-Qq-5K2">
