--- a/WordPress/Classes/ViewRelated/NUX/Signup.storyboard
+++ b/WordPress/Classes/ViewRelated/NUX/Signup.storyboard
@@ -40,16 +40,16 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="19Z-ie-Qfz">
-                                        <rect key="frame" x="0.0" y="223.5" width="375" height="100"/>
+                                        <rect key="frame" x="0.0" y="221.5" width="375" height="102"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" verticalCompressionResistancePriority="1000" text="Log in to WordPress.com using an email address to manage all your WordPress sites." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CPF-7g-0y5">
-                                                <rect key="frame" x="20" y="0.0" width="335" height="36"/>
+                                                <rect key="frame" x="20" y="0.0" width="335" height="38"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                                                 <color key="textColor" red="0.18039215689999999" green="0.2666666667" blue="0.32549019610000002" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email address" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HTy-KJ-his" customClass="LoginTextField" customModule="WordPress" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="56" width="375" height="44"/>
+                                                <rect key="frame" x="0.0" y="58" width="375" height="44"/>
                                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <accessibility key="accessibilityConfiguration" identifier="usernameField"/>
                                                 <constraints>
@@ -68,7 +68,7 @@
                                                 </connections>
                                             </textField>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="750" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EYw-oM-W1K">
-                                                <rect key="frame" x="20" y="100" width="335" height="40"/>
+                                                <rect key="frame" x="20" y="102" width="335" height="40"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="40" placeholder="YES" id="li2-jI-jeL"/>
                                                 </constraints>
@@ -149,13 +149,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="social-signup-waiting" translatesAutoresizingMaskIntoConstraints="NO" id="YhU-Hd-s0v">
-                                <rect key="frame" x="80" y="283.5" width="215" height="120"/>
+                                <rect key="frame" x="80" y="284" width="214.5" height="119"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="YhU-Hd-s0v" secondAttribute="height" multiplier="273:152" id="C7u-Fh-NUi"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is the title text." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fiA-2f-xfj">
-                                <rect key="frame" x="109" y="433.5" width="157.5" height="20.5"/>
+                                <rect key="frame" x="20" y="433" width="335" height="20.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="bqy-9g-gij"/>
                                 </constraints>
@@ -168,9 +168,11 @@
                         <constraints>
                             <constraint firstItem="fiA-2f-xfj" firstAttribute="top" secondItem="YhU-Hd-s0v" secondAttribute="bottom" constant="30" id="AUv-P7-HQL"/>
                             <constraint firstItem="fiA-2f-xfj" firstAttribute="centerX" secondItem="YhU-Hd-s0v" secondAttribute="centerX" id="HjI-h1-oDK"/>
+                            <constraint firstItem="QNf-Kw-8hv" firstAttribute="trailing" secondItem="fiA-2f-xfj" secondAttribute="trailing" constant="20" id="PvO-i7-Qqg"/>
                             <constraint firstItem="YhU-Hd-s0v" firstAttribute="centerX" secondItem="QNf-Kw-8hv" secondAttribute="centerX" id="dEa-Hr-ARh"/>
                             <constraint firstItem="YhU-Hd-s0v" firstAttribute="leading" secondItem="3UA-HJ-Orw" secondAttribute="leading" constant="80" id="fLk-YO-NX6"/>
                             <constraint firstItem="YhU-Hd-s0v" firstAttribute="centerY" secondItem="QNf-Kw-8hv" secondAttribute="centerY" id="tGz-A1-th3"/>
+                            <constraint firstItem="fiA-2f-xfj" firstAttribute="leading" secondItem="QNf-Kw-8hv" secondAttribute="leading" constant="20" id="yl4-uz-BbP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="QNf-Kw-8hv"/>
                     </view>
