--- a/WordPress/Classes/ViewRelated/NUX/LoginEpilogue.storyboard
+++ b/WordPress/Classes/ViewRelated/NUX/LoginEpilogue.storyboard
@@ -109,10 +109,10 @@
             </objects>
             <point key="canvasLocation" x="4117.6000000000004" y="927.88605697151434"/>
         </scene>
-        <!--Login Epilogue Table View-->
+        <!--Login Epilogue Table View Controller-->
         <scene sceneID="sgW-0t-bH0">
             <objects>
-                <tableViewController id="UFO-Sm-cpW" customClass="LoginEpilogueTableView" customModule="WordPress" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController id="UFO-Sm-cpW" customClass="LoginEpilogueTableViewController" customModule="WordPress" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="154" sectionHeaderHeight="28" sectionFooterHeight="28" id="bES-Rc-GFi">
                         <rect key="frame" x="0.0" y="0.0" width="383" height="519"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
